Feat:Added Home page API endpoint frontend

--- a/CA2WFVoidWeatherSystems.csproj
+++ b/CA2WFVoidWeatherSystems.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Components\Pages\weatherAlerts.razor" />
+    <Content Remove="Components\Pages\weatherForecast.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Models\" />
   </ItemGroup>
 
