Feat: Completed Weather report Home Completed User Data Local Store Removed: Login and registration

--- a/CA2WFVoidWeatherSystems.csproj
+++ b/CA2WFVoidWeatherSystems.csproj
@@ -11,4 +11,8 @@
     <Content Remove="Components\Pages\weatherForecast.razor" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\localStorageHelper.js" />
+  </ItemGroup>
+
 </Project>
