--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WeatherAPI": {
+    "ApiKey": "b3e0392a3a5049bfa1d133855240112",
+    "BaseUrl": "http://api.weatherapi.com/v1/"
+  }
 }
