Feat: Completed twitter API endpoint

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,8 @@
   "WeatherAPI": {
     "ApiKey": "b3e0392a3a5049bfa1d133855240112",
     "BaseUrl": "http://api.weatherapi.com/v1/"
+  },
+  "TwitterAPI": {
+    "BearerToken": "AAAAAAAAAAAAAAAAAAAAAFQwxQEAAAAA6%2BDB7a%2FrHnnabItXc3kN%2FD%2FGp%2Bg%3DtSvKA7WKyvGmPnVdoTmiddG03wjFzb68runchXiQdzYyfN2f62"
   }
 }
