--- a/CA2WFVoidWeatherSystems.csproj
+++ b/CA2WFVoidWeatherSystems.csproj
@@ -15,4 +15,8 @@
     <None Include="wwwroot\localStorageHelper.js" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Moq" Version="4.20.72" />
+  </ItemGroup>
+
 </Project>
